--- a/.github/workflows/initial-release.yaml
+++ b/.github/workflows/initial-release.yaml
@@ -62,7 +62,7 @@ jobs:
                   version="0.1.0"
 
                   echo "Publishing ${{ matrix.package }}@$version"
-                  npm run publish
+                  npm run publish --access public
 
                   echo "npm: \`+ ${{ matrix.package }}@$version\`" >> $GITHUB_STEP_SUMMARY
 
