--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,5 +44,5 @@
 		"outDir": "dist"
 	},
 	"exclude": ["/**/node_modules/**/*", "**/dist"],
-	"include": ["src/**/*", "drizzle.config.ts", "Tests/**/*"]
+	"include": ["src/**/*", "drizzle.config.ts", "Tests/**/*", "Server/**/*"]
 }
