Moved relation args to their respective fields in query, removed pagination & order args from one-one relations, minor type & code improvements

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "drizzle-graphql",
 	"type": "module",
 	"author": "Drizzle Team",
-	"version": "0.2.0",
+	"version": "0.2.1",
 	"description": "Automatically generate GraphQL schema or customizable schema config fields from Drizzle ORM schema",
 	"scripts": {
 		"build": "pnpm tsx scripts/build.ts",
@@ -11,7 +11,8 @@
 		"publish": "npm publish package.tgz",
 		"server-test:pg": "DB_TYPE=pg tsx watch Server/server.ts",
 		"server-test:mysql": "DB_TYPE=mysql tsx watch Server/server.ts",
-		"server-test:sqlite": "DB_TYPE=sqlite tsx watch Server/server.ts"
+		"server-test:sqlite": "DB_TYPE=sqlite tsx watch Server/server.ts",
+		"server-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg && DB_TYPE=mysql drizzle-kit generate:mysql && DB_TYPE=sqlite drizzle-kit generate:sqlite"
 	},
 	"license": "Apache-2.0",
 	"devDependencies": {
@@ -69,6 +70,7 @@
 	},
 	"peerDependencies": {
 		"drizzle-orm": ">=0.30.4",
-		"graphql": ">=16.8.1"
+		"graphql": ">=16.8.1",
+		"graphql-parse-resolve-info": ">=4.13.0"
 	}
 }
