--- a/package.json
+++ b/package.json
@@ -2,32 +2,35 @@
 	"name": "drizzle-graphql",
 	"type": "module",
 	"author": "Drizzle Team",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"description": "Automatically generate GraphQL schema or customizable schema config fields from Drizzle ORM schema",
 	"scripts": {
 		"build": "pnpm tsx scripts/build.ts",
 		"b": "pnpm build",
 		"pack": "(cd dist && npm pack --pack-destination ..) && rm -f package.tgz && mv *.tgz package.tgz",
 		"publish": "npm publish package.tgz",
+		"test": "vitest run",
 		"server-test:pg": "DB_TYPE=pg tsx watch Server/server.ts",
 		"server-test:mysql": "DB_TYPE=mysql tsx watch Server/server.ts",
 		"server-test:sqlite": "DB_TYPE=sqlite tsx watch Server/server.ts",
-		"server-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg && DB_TYPE=mysql drizzle-kit generate:mysql && DB_TYPE=sqlite drizzle-kit generate:sqlite"
+		"server-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg && DB_TYPE=mysql drizzle-kit generate:mysql && DB_TYPE=sqlite drizzle-kit generate:sqlite",
+		"test-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg --config=./drizzle.config.test.ts && DB_TYPE=mysql drizzle-kit generate:mysql --config=./drizzle.config.test.ts && DB_TYPE=sqlite drizzle-kit generate:sqlite --config=./drizzle.config.test.ts"
 	},
 	"license": "Apache-2.0",
 	"devDependencies": {
 		"@arethetypeswrong/cli": "^0.15.2",
 		"@babel/parser": "^7.24.1",
-		"@graphql-tools/mock": "^9.0.2",
 		"@libsql/client": "^0.5.6",
 		"@originjs/vite-plugin-commonjs": "^1.0.3",
 		"@types/dockerode": "^3.3.26",
 		"@types/uuid": "^9.0.8",
+		"axios": "^1.6.8",
 		"cpy": "^11.0.1",
 		"dockerode": "^4.0.2",
 		"drizzle-kit": "^0.20.14",
 		"get-port": "^7.0.0",
 		"glob": "^10.3.10",
+		"graphql": "^16.3.0",
 		"graphql-yoga": "^5.1.1",
 		"mysql2": "^3.9.2",
 		"pg": "^8.11.3",
@@ -68,9 +71,11 @@
 		"type": "git",
 		"url": "git+https://github.com/Sukairo-02/drizzle-graphql.git"
 	},
+	"dependencies": {
+		"graphql-parse-resolve-info": "^4.13.0"
+	},
 	"peerDependencies": {
 		"drizzle-orm": ">=0.30.4",
-		"graphql": ">=16.8.1",
-		"graphql-parse-resolve-info": ">=4.13.0"
+		"graphql": ">=16.3.0"
 	}
 }
