Fixed and improved types: removed relations field from `args`, corrected incorrect non-null check on columns, made resolver `args` partial; Turning `Error`s into `GraphQLError`s in resolvers; Removed `limit` argument from `-Single` resolvers; Fixed incorrect data mapping of `JSON` fields in inputs; Added tests

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@ node_modules
 package-lock.json
 dist
 *.sqlite
-**/Test 
-**/Tests
 vitest.config.ts
 drizzle.config.ts
 *.tgz
@@ -12,4 +10,6 @@ dist-dts
 dist.new
 Server
 pnpm-lock.yaml
-drizzle.config.test.ts
+runMysql.ts
+Tests/.temp
+Tests/Migrations
