--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "drizzle-graphql",
 	"type": "module",
 	"author": "Drizzle Team",
-	"version": "0.2.3",
+	"version": "0.2.4",
 	"description": "Automatically generate GraphQL schema or customizable schema config fields from Drizzle ORM schema",
 	"scripts": {
 		"build": "pnpm tsx scripts/build.ts",
@@ -14,7 +14,7 @@
 		"server-test:mysql": "DB_TYPE=mysql tsx watch Server/server.ts",
 		"server-test:sqlite": "DB_TYPE=sqlite tsx watch Server/server.ts",
 		"server-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg && DB_TYPE=mysql drizzle-kit generate:mysql && DB_TYPE=sqlite drizzle-kit generate:sqlite",
-		"test-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg --config=./drizzle.config.test.ts && DB_TYPE=mysql drizzle-kit generate:mysql --config=./drizzle.config.test.ts && DB_TYPE=sqlite drizzle-kit generate:sqlite --config=./drizzle.config.test.ts"
+		"test-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg --config=./drizzle.test-config.ts && DB_TYPE=mysql drizzle-kit generate:mysql --config=./drizzle.test-config.ts && DB_TYPE=sqlite drizzle-kit generate:sqlite --config=./drizzle.test-config.ts"
 	},
 	"license": "Apache-2.0",
 	"devDependencies": {
@@ -27,7 +27,8 @@
 		"axios": "^1.6.8",
 		"cpy": "^11.0.1",
 		"dockerode": "^4.0.2",
-		"drizzle-kit": "^0.20.14",
+		"drizzle-kit": "^0.20.14-05603dc",
+		"drizzle-orm": "^0.30.7",
 		"get-port": "^7.0.0",
 		"glob": "^10.3.10",
 		"graphql": "^16.3.0",
@@ -44,6 +45,7 @@
 		"uuid": "^9.0.1",
 		"vite-tsconfig-paths": "^4.3.2",
 		"vitest": "^1.4.0",
+		"zod": "^3.22.4",
 		"zx": "^7.2.3"
 	},
 	"keywords": [
@@ -75,7 +77,7 @@
 		"graphql-parse-resolve-info": "^4.13.0"
 	},
 	"peerDependencies": {
-		"drizzle-orm": ">=0.30.4",
+		"drizzle-orm": ">=0.30.7",
 		"graphql": ">=16.3.0"
 	}
 }
