--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "drizzle-graphql",
 	"type": "module",
 	"author": "Drizzle Team",
-	"version": "0.2.5",
+	"version": "0.3.0",
 	"description": "Automatically generate GraphQL schema or customizable schema config fields from Drizzle ORM schema",
 	"scripts": {
 		"build": "pnpm tsx scripts/build.ts",
@@ -10,9 +10,9 @@
 		"pack": "(cd dist && npm pack --pack-destination ..) && rm -f package.tgz && mv *.tgz package.tgz",
 		"publish": "npm publish package.tgz",
 		"test": "vitest run",
-		"server-test:pg": "DB_TYPE=pg tsx watch Server/server.ts",
-		"server-test:mysql": "DB_TYPE=mysql tsx watch Server/server.ts",
-		"server-test:sqlite": "DB_TYPE=sqlite tsx watch Server/server.ts",
+		"server-test:pg": "DB_TYPE=pg tsx watch server/server.ts",
+		"server-test:mysql": "DB_TYPE=mysql tsx watch server/server.ts",
+		"server-test:sqlite": "DB_TYPE=sqlite tsx watch server/server.ts",
 		"server-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg && DB_TYPE=mysql drizzle-kit generate:mysql && DB_TYPE=sqlite drizzle-kit generate:sqlite",
 		"test-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg --config=./drizzle.test-config.ts && DB_TYPE=mysql drizzle-kit generate:mysql --config=./drizzle.test-config.ts && DB_TYPE=sqlite drizzle-kit generate:sqlite --config=./drizzle.test-config.ts"
 	},
@@ -27,8 +27,8 @@
 		"axios": "^1.6.8",
 		"cpy": "^11.0.1",
 		"dockerode": "^4.0.2",
-		"drizzle-kit": "^0.20.14-05603dc",
-		"drizzle-orm": "^0.30.7",
+		"drizzle-kit": "^0.20.16",
+		"drizzle-orm": "^0.30.8-3d06cf2",
 		"get-port": "^7.0.0",
 		"glob": "^10.3.10",
 		"graphql": "^16.3.0",
@@ -77,7 +77,7 @@
 		"graphql-parse-resolve-info": "^4.13.0"
 	},
 	"peerDependencies": {
-		"drizzle-orm": ">=0.30.7",
+		"drizzle-orm": ">=0.30.8-3d06cf2",
 		"graphql": ">=16.3.0"
 	}
 }
