Updated release workflow, git link

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -62,6 +62,6 @@ jobs:
                   version="0.1.0"
 
                   echo "Publishing ${{ matrix.package }}@$version"
-                  npm run publish --access public --otp ${{ secrets.NPM_OTP }}
+                  npm run publish --access public
 
                   echo "npm: \`+ ${{ matrix.package }}@$version\`" >> $GITHUB_STEP_SUMMARY
