--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,7 +23,7 @@ jobs:
               name: Install pnpm
               id: pnpm-install
               with:
-                  version: latest
+                  version: '9'
                   run_install: false
 
             - name: Get pnpm store directory
@@ -42,6 +42,9 @@ jobs:
 
             - name: Install dependencies
               run: pnpm install --frozen-lockfile
+
+            - name: Lint
+              run: pnpm lint
 
             - name: Build
               run: |
