Fix pnpm command

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -59,7 +59,7 @@ jobs:
 
             - name: Run @arethetypeswrong/cli
               run: |
-                  pn attw package.tgz
+                  pnpm attw package.tgz
 
             - name: Publish
               shell: bash
