Feature: disable mutations on returned schema; updated packages & kit config

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "drizzle-graphql",
 	"type": "module",
 	"author": "Drizzle Team",
-	"version": "0.5.0",
+	"version": "0.6.0",
 	"description": "Automatically generate GraphQL schema or customizable schema config fields from Drizzle ORM schema",
 	"scripts": {
 		"build": "pnpm tsx scripts/build.ts",
@@ -13,8 +13,8 @@
 		"server-test:pg": "DB_TYPE=pg tsx watch server/server.ts",
 		"server-test:mysql": "DB_TYPE=mysql tsx watch server/server.ts",
 		"server-test:sqlite": "DB_TYPE=sqlite tsx watch server/server.ts",
-		"server-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg && DB_TYPE=mysql drizzle-kit generate:mysql && DB_TYPE=sqlite drizzle-kit generate:sqlite",
-		"test-generate-migrations": "DB_TYPE=pg drizzle-kit generate:pg --config=./drizzle.test-config.ts && DB_TYPE=mysql drizzle-kit generate:mysql --config=./drizzle.test-config.ts && DB_TYPE=sqlite drizzle-kit generate:sqlite --config=./drizzle.test-config.ts",
+		"server-generate-migrations": "DB_TYPE=pg drizzle-kit generate && DB_TYPE=mysql drizzle-kit generate && DB_TYPE=sqlite drizzle-kit generate",
+		"test-generate-migrations": "DB_TYPE=pg drizzle-kit generate --config=./drizzle.test-config.ts && DB_TYPE=mysql drizzle-kit generate --config=./drizzle.test-config.ts && DB_TYPE=sqlite drizzle-kit generate --config=./drizzle.test-config.ts",
 		"lint": "dprint check --list-different"
 	},
 	"exports": {
@@ -38,19 +38,21 @@
 		"@libsql/client": "^0.5.6",
 		"@originjs/vite-plugin-commonjs": "^1.0.3",
 		"@types/dockerode": "^3.3.26",
+		"@types/pg": "^8.11.6",
 		"@types/uuid": "^9.0.8",
 		"axios": "^1.6.8",
 		"cpy": "^11.0.1",
 		"dockerode": "^4.0.2",
 		"dprint": "^0.45.1",
-		"drizzle-kit": "^0.20.16",
-		"drizzle-orm": "0.30.8-3d06cf2",
+		"drizzle-kit": "^0.21.2",
+		"drizzle-orm": "0.30.10",
 		"get-port": "^7.0.0",
 		"glob": "^10.3.10",
 		"graphql": "^16.3.0",
 		"graphql-yoga": "^5.1.1",
 		"mysql2": "^3.9.2",
-		"pg": "^8.11.3",
+		"node-pg": "^1.0.1",
+		"pg": "^8.11.5",
 		"postgres": "^3.4.3",
 		"recast": "^0.23.6",
 		"resolve-tspaths": "^0.8.18",
