Fixed fields not being selected properly from fragments

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@ server
 runMysql.ts
 runMysql-old.ts
 runPg.ts
-Tests/.temp
-Tests/Migrations
+tests/.temp
+tests/Migrations
 .DS_Store
 drizzle.test-heavy.ts
 changes.md
+tests/isolated.test.ts
